0.4.2 (unreleased)
------------------

- Pyramid 1.1 compatibility (amleczko)

- Adding IBeforeListingRenderEvent (amleczko)


0.4.1 (2011-07-01)
------------------

- Fix documentation urls (gawel)

- Adding fallback for missing model_class on request (gawel)

- Adding missing templates to egg (ConceitedCode, do3cc)

0.4 - aka CRUD Sprint (hosted by Red Turtle) release
----------------------------------------------------

- view customisation per model (amleczko)

- autocomplete renderer for relations (amleczko)

- various events hook (amleczko)

- paster template for Akhet (do3cc)

- permission check in model listing

- customisable actions

- i18n


0.2
---

- Take care of permissions. You can now use an __acl__ attribute in your SA
  models to restrict access

0.1
---

-  Initial version